--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -376,15 +376,17 @@ a {
 	height: 100%;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
-	align-items: baseline;
+	align-items: flex-start;
 	flex-wrap: wrap;
 	row-gap: 29px;
 	margin-bottom: 67.29px;
+	gap: 9px;
+	overflow: auto;
 }
 
 .project-contener div {
 	height: 102.57px;
+	width: 76.8px;
 	position: relative;
 }
 
